--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id= "WebDevelopment" class="content-section container">
         <h2 class = "section-header">Web Development</h2>        
         <p class = "sectionparagraph"> 
-          I develop websites and enjoy drawing with code. Try controlling this symmetry experiment. You can adjust some parameters, rotate and zoom.  
+          I develop websites and draw with code. Try controlling this symmetry experiment. You can adjust some parameters, rotate and zoom.  
     
         </p>
     
