--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2 class = "section-header">Web Development</h2>        
         <p class = "sectionparagraph"> 
           I develop websites and draw with code. Have a look at the following symmetry experiments. 
-          You can control groups' speed of rotation control distances between , zoom and rotate in 3D.   <br><br>
+          You can control groups' speed of rotation, distances between particles, zoom and rotate in 3D.   <br><br>
           <a href = "threejs1.html" >1.</a>
 
         </p>
