added Cosmic Kali to interactivityPage.html

--- a/interactivityPage.html
+++ b/interactivityPage.html
@@ -46,7 +46,14 @@
   <section id="Interactivity" class="content-section container">
            
     <h2 class = "section-header">Interactivity</h2>
-      Some interactive projects I worked on
+    I create interactive installations, taking care of:
+    <ul class= "section-list">    
+      <li>Software development</li>
+      <li>Hardware assembly</li>
+      <li>Project management</li>
+    </ul>
+      
+    Some interactive projects I worked on
   
     <br><br>
    
@@ -66,6 +73,14 @@
    <br> <br>
 </p>
 
+
+<div class= "iframe-container-43">
+  <iframe src="https://www.instagram.com/p/BepblSAF94v/embed" ></iframe>
+</div>
+<p class = "content-description"> 
+  Cosmic Kali installation at Rainbow Serpent 2018, scroll across to see more footage
+ <br> <br>
+</p>
 <div class= "iframe-container-169">
   <iframe src="https://www.instagram.com/p/BP4kxMuAdaA/embed"  ></iframe>
 </div>
