uniformed home button across all pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>  
   <header class="main-header" >     
-   <div class = "main-title">ALe</div>
+    <div class = "main-title"><a href = "https://alecesana.github.io/" alt = "home">ALe</a></div>
    <div class="inLineHeaderContainer"> 
       <div id = "navElementsContainer">      
         <div class="navbar-toggle" id="navbar-icon">
