--- a/threejs1.html
+++ b/threejs1.html
@@ -16,7 +16,7 @@
 <body>  
 
 <header class="main-header" id = "header" >     
-    <div class = "main-title"><a href = "index.html" alt = "home">ALe</a></div>
+    <div class = "main-title"><a href = "https://alecesana.github.io/" alt = "home">ALe</a></div>
     <div class="inLineHeaderContainer"> 
        <div id = "navElementsContainer">      
          <div class="navbar-toggle" id="navbar-icon">
