--- a/cyclingcolors.html
+++ b/cyclingcolors.html
@@ -15,7 +15,7 @@
 
 
         <header class="main-header" >     
-                <div class = "main-title"><a href = "index.html" alt = "home">ALe</a></div>
+                <div class = "main-title"><a href = "https://alecesana.github.io/" alt = "home">ALe</a></div>
                 <div class="inLineHeaderContainer"> 
                    <div id = "navElementsContainer">      
                      <div class="navbar-toggle" id="navbar-icon">
