meta tags polishing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang = "en">
 <head>
 <title>Ale Cesana</title>
-<meta name = "description" content = "Alessandro Cesana, Web and Software Developer, Melbourne Australia">
+<meta name = "description" content = "Web and Software Developer Melbourne Australia . Code interactivity automation">
+<meta name = "keywords" content = "= interactive installations web development code automation  Melbourne">
+
 <meta name ="viewport" content="initial-scale=1.0,width=device-width">
 <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -56,9 +58,9 @@
     <h2 class = "section-header">Interactivity</h2>
     I create interactive installations, taking care of:
     <ul class= "section-list">    
-      <li>Software development</li>
-      <li>Hardware assembly</li>
-      <li>Project management</li>
+      <li><h3>Software development</h3></li>
+      <li><h3>Hardware assembly</h3></li>
+      <li><h3>Project management</h3></li>
     </ul>       
     <div class= "iframe-container-169">
       <iframe src="https://www.instagram.com/p/BP4kxMuAdaA/embed"  ></iframe>
