--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           <a href = "threejs2.html" >2.</a> 
          </p>
           <a href = "threejs2.html" alt = "link to symmetry experiment 2"><img src="./data/ThreeJsSymmetry2.PNG" class= "large-image"></a>
-
+          <p class = "sectionparagraph"> 
+            <a href = "threejs3.html" >3.</a> 
+          </p>
        
     </section>
      
