adjusted meta descriptions, added object splitting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Ale Cesana</title>
 <meta name = "description" content = "Web and Software Developer Melbourne Australia . Code interactivity automation">
-<meta name = "keywords" content = "= interactive installations web development code automation  Melbourne">
+<meta name = "keywords" content = "interactive installations web development code automation  Melbourne">
 
 <meta name ="viewport" content="initial-scale=1.0,width=device-width">
 <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
