--- a/cyclingcolors.html
+++ b/cyclingcolors.html
@@ -4,7 +4,8 @@
 
 <head>
 <title>Ale Cesana</title>
-<meta name = "description" content = "text to add">
+<meta name = "description" content = "Web and Software Developer Melbourne Australia . Code interactivity automation">
+<meta name = "keywords" content = "interactive installations web development code automation  Melbourne">
 <meta name ="viewport" content="initial-scale=1.0,width=device-width">
 <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
