--- a/interactivityPage.html
+++ b/interactivityPage.html
@@ -30,7 +30,7 @@
                           <li><a href="index.html#Automation" >automation</a></li>
                           <li><a href="threejs1.html">web</a></li>
                           <li><a href = "cyclingcolors.html">code</a></li> 
-                          <li><a href = "#about" class = "scroll" >about</a></li>
+                          <li><a href = "about.html" class = "scroll" >about</a></li>
                           <li><a href="#Contact" class = "scroll">contact</a></li> 
                         </ul>
              </div>    
@@ -90,35 +90,7 @@ Interactive installation, Australian Open 2017
 </p>
   </section>
 
-  <section id="about" class="content-section container">
-    <h2 class= "section-header" >About</h2>  
-    <p class= "sectionparagraph">
-        I started coding in C++ while graduating in <a href = "https://en.wikipedia.org/wiki/Materials_science"> Materials Science</a>, a subject involving Physics, Chemistry and Mathematics 
-          applied to the development of new materials. I have been working in sales of electronics systems for the past four years and skateboarding since 2001.
-          In my spare time I have been designing, assembling and programming various types of electronics systems as a private contractor.
-          Along the way I picked up more languages and frameworks to suit different needs, such as
-   
-      
-    <ul class = "section-list">  
-    <li>more C++ (Openframeworks, OpenCV, some <a href = "cyclingcolors.html">code here</a>)</li>
-    <li>OpenGL and WebGL</li>
-    <li>Java (Processing, LXstudio)</li>
-    <li>Python</li>
-    <li>Mql4</li>
-    <li>Scio Molecular Spectroscopy Dev Kit</li>
-    <li>Brand specific programmable  logic controller languages (Arduino, Splat controls, Allen Bradley)</li> 
-    <li>Html, CSS,  and JavaScript (Vanilla and JQuery, currently studying React and other Front-End frameworks)</li> 
-    </ul>
-   
-    Some of my certifications and profiles
-     <ul class = "links-list">
-      <li><a href = "https://www.freecodecamp.org/certification/fcc9e6e3f93-0258-4926-b468-a21c9ffa4671/responsive-web-design">Responsive Web Design certification</a></li>   
-      <li><a href = "https://www.freecodecamp.org/certification/fcc9e6e3f93-0258-4926-b468-a21c9ffa4671/javascript-algorithms-and-data-structures">JavaScript Algorithms and Data Structures certification</a></li>
-      <li><a href = "https://www.freecodecamp.org/fcc9e6e3f93-0258-4926-b468-a21c9ffa4671">My Freecodecamp profile</a><li></li>
-      <li><a href = "https://codepen.io/ale5/" >My Codepen profile</a></li>
-      <li><a href = "https://github.com/alecesana">My GitHub profile</a></li>
-    </ul>
-  </section>
+  
       <br>
       <br>
       <section id = "Contact" class="content-section container">
