--- a/interactivityPage.html
+++ b/interactivityPage.html
@@ -30,7 +30,7 @@
                           <li><a href="index.html#Automation" >automation</a></li>
                           <li><a href="threejs1.html">web</a></li>
                           <li><a href = "cyclingcolors.html">code</a></li> 
-                          <li><a href = "about.html" class = "scroll" >about</a></li>
+                          <li><a href = "about.html"  >about</a></li>
                           <li><a href="#Contact" class = "scroll">contact</a></li> 
                         </ul>
              </div>    
@@ -47,13 +47,15 @@
   <section id="Interactivity" class="content-section container">
            
     <h2 class = "section-header">Interactivity</h2>
-    I create interactive installations, taking care of:
+    I create interactive installations, taking care of system design, software development, hardware assembly and project management.
+
+    <!--
     <ul class= "section-list">    
       <li>Software development</li>
       <li>Hardware assembly</li>
       <li>Project management</li>
     </ul>
-      
+  -->
     Some interactive projects I worked on
   
     <br><br>
