--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                                 <li><a href="index.html#Automation" >automation</a></li>
                                 <li><a href="threejs1.html">web</a></li>
                                 <li><a href = "cyclingcolors.html">code</a></li> 
-                                <li><a href = "about.html" class = "scroll" >about</a></li>
+                                <li><a href = "about.html"  >about</a></li>
                                 <li><a href="#Contact" class = "scroll">contact</a></li> 
                               </ul>
                    </div>    
