--- a/threejs2.html
+++ b/threejs2.html
@@ -29,7 +29,7 @@
             <li><a href="index.html#Automation" >automation</a></li>
             <li><a href="threejs1.html">web</a></li>
             <li><a href = "cyclingcolors.html">code</a></li> 
-            <li><a href = "about.html" class = "scroll" >about</a></li>
+            <li><a href = "about.html"  >about</a></li>
             <li><a href="index.html#Contact" >contact</a></li> 
           </ul>
        </div>    
