adjusted all pages to new layout

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p class = "sectionparagraph"> 
           I develop websites and draw with code. Have a look at these symmetry experiments. 
           You can control groups' speed of rotation, distances between particles, zoom and rotate in 3D.   <br><br>
-          <a href = "threejs1.html" >1.</a>
+          
 
         </p>
     </section>
@@ -88,10 +88,9 @@
    <p class = "content-description" > Prototype phase of an industrial waste water treatment machine, commissioned by <a href= "https://www.memflotech.com.au/index.html">
   Memflow Water technology</a> and <a href = "http://enviro-now.com/"> Enviro-now</a></p> 
 
-  <div class  = "container">
-
+<div class  = "container">
 <section id = "Contact" class="content-section container">
-  <p class= "sectionparagraph">
+  <p class= "centeredParagraph">
           
   Would you like me to develop something for you or your business?<br>
 </p>
@@ -100,8 +99,8 @@
   <a href="mailto:cesaless@gmail.com"><i class="fas fa-envelope p-icon"></i>Email</a>
   <a href = "https://www.instagram.com/alecesana"><i class="fab fa-instagram icon-3x p-icon"></i>Instagram</a>
   </div>
-
 </section>
+</div>
 
 </div>
 </div>
