--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                                 <li><a href="threejs1.html">web</a></li>
                                 <li><a href = "cyclingcolors.html">code</a></li> 
                                 <li><a href = "about.html"  >about</a></li>
-                                <li><a href="#Contact" class = "scroll">contact</a></li> 
+                                <li><a href="index.html#Contact" class = "scroll">contact</a></li> 
                               </ul>
                    </div>    
                  </div> 
