--- a/cyclingcolors.html
+++ b/cyclingcolors.html
@@ -26,7 +26,7 @@
                         <ul class= "main-nav" >    
                             <li><a href="interactivityPage.html" >interactivity</a></li>
                             <li><a href="index.html#Automation" >automation</a></li>
-                            <li><a href="threejs1.html">web</a></li>
+                            <li><a href="index.html#WebDevelopment">web</a></li>
                             <li><a href = "cyclingcolors.html">code</a></li> 
                             <li><a href = "about.html"  >about</a></li>
                             <li><a href="#Contact" class = "scroll">contact</a></li> 
