allowed scroll on threejs container, added auto rotation, adjusted gui position, placed automation section in its own webpage

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
                          <i class="fas fa-bars IconColor"></i>
                      </div> 
                    <div id = "navContainer">            
-                        <ul class= "main-nav" >    
+                        <ul class= "main-nav" >   
+                                <li><a href="index.html#threejsBiggercontainer1" >web</a></li> 
                                 <li><a href="interactivityPage.html" >interactivity</a></li>
-                                <li><a href="index.html#Automation" >automation</a></li>
-                                <li><a href="threejs1.html">web</a></li>
+                                <li><a href="automation.html" >automation</a></li>
                                 <li><a href = "cyclingcolors.html">code</a></li> 
                                 <li><a href = "about.html"  >about</a></li>
                                 <li><a href="index.html#Contact" class = "scroll">contact</a></li> 
