--- a/cyclingcolors.html
+++ b/cyclingcolors.html
@@ -24,9 +24,9 @@
                      </div> 
                    <div id = "navContainer">            
                         <ul class= "main-nav" >    
+                            <li><a href="index.html#threejsBiggercontainer1" >web</a></li>
                             <li><a href="interactivityPage.html" >interactivity</a></li>
-                            <li><a href="index.html#Automation" >automation</a></li>
-                            <li><a href="index.html#WebDevelopment">web</a></li>
+                            <li><a href="automation.html" >automation</a></li>
                             <li><a href = "cyclingcolors.html">code</a></li> 
                             <li><a href = "about.html"  >about</a></li>
                             <li><a href="#Contact" class = "scroll">contact</a></li> 
