--- a/threejs2.html
+++ b/threejs2.html
@@ -24,10 +24,10 @@
              <i class="fas fa-bars IconColor"></i>
          </div> 
        <div id = "navContainer">  
-          <ul class= "main-nav" >    
+          <ul class= "main-nav" >  
+            <li><a href="index.html#threejsBiggercontainer1" >web</a></li>  
             <li><a href="interactivityPage.html" >interactivity</a></li>
-            <li><a href="index.html#Automation" >automation</a></li>
-            <li><a href="index.html#webDevelopment">web</a></li>
+            <li><a href="automation.html" >automation</a></li>
             <li><a href = "cyclingcolors.html">code</a></li> 
             <li><a href = "about.html"  >about</a></li>
             <li><a href="index.html#Contact" >contact</a></li> 
@@ -67,7 +67,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script type="text/javascript" src=".\js\main.js"></script>
     <script src="./js/three.min.js"></script>
-    <script src="./js/datguimin.js"></script>
+    <script src="./js/datgui.js"></script>
     <script src="./js/stats.js-master/build/stats.min.js"></script>
     <script src="./js/TrackballControls.js"></script>   
     <script src="./js/WebGL.js"></script> 
