--- a/threejs3.html
+++ b/threejs3.html
@@ -69,7 +69,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script type="text/javascript" src=".\js\main.js"></script>
     <script src="./js/three.min.js"></script>
-    <script src="./js/datguimin.js"></script>
+    <script src="./js/datgui.js"></script>
     <script src="./js/stats.js-master/build/stats.min.js"></script>
     <script src="./js/TrackballControls.js"></script>   
     <script src="./js/WebGL.js"></script> 
