added navIcon/X animation for all pages

--- a/interactivityPage.html
+++ b/interactivityPage.html
@@ -21,9 +21,13 @@
           <div class = "main-title"><a href = "https://alecesana.github.io/" alt = "home">ALe</a></div>
           <div class="inLineHeaderContainer"> 
              <div id = "navElementsContainer">      
-               <div class="navbar-toggle" id="navbar-icon">
-                   <i class="fas fa-bars IconColor"></i>
-               </div> 
+              <div class="col" id = "navIcon">
+                <div class="con">
+                  <div class="bar top"></div>
+                  <div class="bar middle"></div>
+                  <div class="bar bottom"></div>
+                </div>
+              </div> 
              <div id = "navContainer">            
                   <ul class= "main-nav" >    
                       <li><a href="index.html#threejsBiggercontainer1" >web</a></li>
