--- a/index.html
+++ b/index.html
@@ -18,19 +18,26 @@
     <div class = "main-title"><a href = "https://alecesana.github.io/" alt = "home">ALe</a></div>
    <div class="inLineHeaderContainer"> 
       <div id = "navElementsContainer">      
-        <div class="navbar-toggle" id="navbar-icon">
-            <i class="fas fa-bars IconColor"></i>
-        </div> 
+        
+        <div class="col" id = "navIcon">
+          <div class="con">
+            <div class="bar top"></div>
+            <div class="bar middle"></div>
+            <div class="bar bottom"></div>
+          </div>
+        </div>  
+        
       <div id = "navContainer">            
         <ul class= "main-nav" >    
-            <li><a href="#threejsBiggercontainer1" class = "scroll">web</a></li>
+          <li><a href="#threejsBiggercontainer1" class = "scroll">web</a></li>
           <li><a href="#Interactivity" class = "scroll">interactivity</a></li>
           <li><a href="automation.html" >automation</a></li>          
           <li><a href = "cyclingcolors.html">code</a></li> 
           <li><a href = "about.html"  >about</a></li>
           <li><a href="#Contact" class = "scroll">contact</a></li> 
         </ul>
-      </div>    
+      </div> 
+
     </div> 
    </div>
 </header>
