changed fonts and tweaked centering layouts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <meta name = "keywords" content = "interactive installations web development code automation  Melbourne">
 
 <meta name ="viewport" content="initial-scale=1.0,width=device-width">
-<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Palanquin" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Habibi" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
 
 <link rel="stylesheet" href="css\main.css">
 </head>
@@ -112,7 +114,7 @@
 <section id = "Contact" class="content-section container">
   <p class= "centeredParagraph">
           
-  Would you like me to develop something for you or your business?<br>
+  Contact me via<br>
 </p>
   <div class = "b">
     
