--- a/threejs3.html
+++ b/threejs3.html
@@ -2,17 +2,21 @@
 <html lang = "en">
 
 
-<head>
-<title>Ale Cesana</title>
-<meta name = "description" content = "Web and Software Developer Melbourne Australia . Code interactivity automation">
-<meta name = "keywords" content = "interactive installations web development code automation  Melbourne">
-<meta name ="viewport" content="initial-scale=1.0,width=device-width">
-<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
-
-<link rel="stylesheet" href="css\main.css">
-</head>
+  <head>
+    <title>Ale Cesana</title>
+    <meta name = "description" content = "Web and Software Developer Melbourne Australia . Code interactivity automation">
+    <meta name = "keywords" content = "interactive installations web development code automation  Melbourne">
+    
+    <meta name ="viewport" content="initial-scale=1.0,width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Palanquin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Habibi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chivo" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="css\main.css">
+    </head>
 
 <body>  
 
