displayed all instagram tiles in main  page

--- a/automation.html
+++ b/automation.html
@@ -59,7 +59,7 @@
     <h2 class= "section-header" >Automation</h2>
     <p class= "sectionparagraph">
   
-    I design, program  and assemble industrial and commercial automation systems
+    I design, program  and assemble industrial and commercial automation systems. 
    <br><br>
    </p>
   </section>
