adjusted nav Icon size, section-header width, temporarily removed automation section

--- a/cyclingcolors.html
+++ b/cyclingcolors.html
@@ -37,9 +37,9 @@
            <ul class= "main-nav" >    
                <li><a href="index.html#threejsBiggercontainer1"  >web</a></li>
                    <li><a href="index.html#Interactivity"  >interactivity</a></li>
-                   <li><a href="automation.html" >automation</a></li>
+                   <!--<li><a href="automation.html" >automation</a></li>-->
                    <li><a href = "cyclingcolors.html">code</a></li> 
-                   <li><a href = "about.html"  >about</a></li>
+                   <li><a href = "index.html#about"  >about</a></li>
                    <li><a href="#Contact" class = "scroll">contact</a></li> 
                  </ul>
       </div> 
@@ -51,8 +51,8 @@
    </header>
 <div class  = "container">
 
-  <section id="CyclingColors" class="content-section container">  
-          <h2 class = "section-header">Multi Target Cycling Colours with Openframeworks</h2>          
+  <section id="CyclingColors" class="content-section stay ">  
+          <h2 class = "section-header ">Multi Target Cycling Colours with Openframeworks</h2>          
     <p class = "sectionparagraph">I wrote this code to share the principles behind the smooth colour changing functions used in my interactive work.
         </p>
 
