--- a/interactivityPage.html
+++ b/interactivityPage.html
@@ -109,7 +109,7 @@
   
       <br>
       <br>
-      <div class  = "container">
+      <div class  = "container stay">
         <section id = "Contact" class="content-section container">
           <p class= "centeredParagraph">
                   
