added text shadow to main title, fixed smooth scroll

--- a/automation.html
+++ b/automation.html
@@ -59,7 +59,7 @@
     <h2 class= "section-header" >Automation</h2>
     <p class= "sectionparagraph">
   
-    Having a background in science and years of work experience in electronics I also enjoy designing, programming  and assembling industrial and commercial automation systems.<br> What you see in this picture is a wastewater filtering control system.
+    I enjoy designing, programming  and assembling industrial and commercial automation systems.<br> What you see in this picture is a wastewater filtering control system.
    <br><br>
    </p>
   </section>
