added random quote picker to web dev section

--- a/index.html
+++ b/index.html
@@ -66,10 +66,22 @@
         <p class = "sectionparagraph "> 
           I develop websites and draw with code. Have a look at the above symmetry experiment. <br><br>
           You can adjust its appeareance by clicking or tapping on it <br><br>
-          <!--A more interactive example can be found <a href = "threejs3.html">here</a>  <br><br> -->
-        </p>
-    </section>
-  </div> 
+   
+              Below is a quote picker written using ReactJS and animated using Javascript. Try picking one!<br><br>
+            </p>
+      </section>
+            <p class="codepen" data-height="838" data-theme-id="0" data-default-tab="result" data-user="ale5" data-slug-hash="BMOmgq" style="height: 838px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Random Quote Machine FCC">
+                <span>See the Pen <a href="https://codepen.io/ale5/pen/BMOmgq/">
+                Random Quote Machine FCC</a> by Ale Cesana (<a href="https://codepen.io/ale5">@ale5</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+              </p>
+              <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+
+    </div>
+   
+  
+    
+  
 
     <div class  = "container">  
       <section id="Interactivity" class="content-section container ">
