adjusted react code in quote picker

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 <title>Alessandro Cesana</title>
-<meta name = "description" content = "Web and Software Developer Melbourne Australia . Code interactivity automation">
+<meta name = "description" content = "Web and Software Developer,  Melbourne Australia . Web, interactivity, internet of things">
 <meta name = "keywords" content = "interactive installations web development code automation  Melbourne">
 
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -70,12 +70,12 @@
               Below is a quote picker written using ReactJS and animated using Javascript. Try picking one!<br><br>
             </p>
       </section>
-            <p class="codepen" data-height="838" data-theme-id="0" data-default-tab="result" data-user="ale5" data-slug-hash="BMOmgq" style="height: 838px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Random Quote Machine FCC">
-                <span>See the Pen <a href="https://codepen.io/ale5/pen/BMOmgq/">
-                Random Quote Machine FCC</a> by Ale Cesana (<a href="https://codepen.io/ale5">@ale5</a>)
-                on <a href="https://codepen.io">CodePen</a>.</span>
-              </p>
-              <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+      <p class="codepen" data-height="838" data-theme-id="0" data-default-tab="result" data-user="ale5" data-slug-hash="BMOmgq" style="height: 838px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Random Quote Machine FCC">
+          <span>See the Pen <a href="https://codepen.io/ale5/pen/BMOmgq/">
+          Random Quote Machine FCC</a> by Ale Cesana (<a href="https://codepen.io/ale5">@ale5</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
     </div>
    
